@@ -30,6 +30,7 @@
   memset buffer before fclose to prevent info leaks
   add unshare
   fix strcasecmp and strncasecmp if strings had chars < 'A' (Gabriel Ravier)
+  fix wcscmp and wcsncmp if wchar substraction would overflow (Gabriel Ravier)
 
 0.34:
   move stpcpy from libcompat to lib as it is now part of POSIX (Enrico Scholz)
